<resources>
    <string name="app_name">Team 20 Project 2</string>
    <string name="Username">Username: </string>
    <string name="Password">Password: </string>
    <string name="Password2">Re-enter Password: </string>
    <string name="Create">Create</string>
    <string name="noMatch">Passwords do not match!</string>
    <string name="Cancel">Cancel</string>
    <string name="CreationFailed">Could not create user</string>
    <string name="Login">Login</string>
    <string name="save_user">Remember me</string>
    <string name="new_user">New User</string>
    <string name="pleaseEnterInfo">Please fill out all of the feilds!</string>
    <string name="LoginFailed">Login Failed</string>
    <string name="loading">Loading...</string>
    <string name="Dummy">Welcome to Chess... \n Waiting for another player...</string>
    <string name="blank" />
    <string name="PickPromotion">Select a type for promotion</string>
    <string name="invalid">Invalid Move</string>
    <string name="pressPromote">Press Promote Button</string>
    <string name="Player1"></string>
    <string name="Player2"></string>
    <string name="Player1Wins">Player 1 Wins!</string>
    <string name="Player2Wins">Player 2 Wins!</string>
    <string name="win">Wins</string>
    <string name="newgame">New Game</string>
    <string name="player1_text">Player 1</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="resign">Resign</string>
    <string name="finish">Finish</string>
    <string name="Promote">Promote</string>
    <string name="YouLost">You Lost the Game</string>
    <string name="waiting_for_opponent_to_move">Waiting for Opponent to Move</string>
    <string name="setting_up_game">Setting up game</string>
</resources>
