<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/userText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="4"
        android:ems="10"
        android:gravity="bottom"
        android:hint="@string/Username"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="bottom"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/save_user" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onLogin"
            android:text="@string/Login" />

        <Button
            android:id="@+id/newUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCreateUser"
            android:text="@string/new_user" />
    </LinearLayout>

</LinearLayout>