<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewUserActivity">

    <EditText
        android:id="@+id/createUserEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:ems="10"
        android:gravity="bottom"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/createPasswordEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="bottom"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/createPasswordEditText2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="bottom"
        android:hint="@string/Password2"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/createButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCreateUser"
            android:text="@string/Create" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onCancel"
            android:text="@string/Cancel" />
    </LinearLayout>

</LinearLayout>